--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
         <div class="track-card">
           <div class="icon-circle"><i class="fas fa-university"></i></div>
           <div class="track-title">Indian Knowledge System & NEP</div>
-          <div class="track-desc">Exploring India's literary heritage and integrating it with the New Education Policy's vision for a culturally rooted curriculum.</div>
+          <div class="track-desc">Exploring India's literary heritage and integrating it with the National Education Policy's vision for a culturally rooted curriculum.</div>
         </div>
       </div>
     </section>
