--- a/index.html
+++ b/index.html
@@ -70,71 +70,142 @@
         }
 
         /* Campus Carousel */
-        .campus-carousel {
+        .campus-carousel.custom-leftalign {
             position: relative;
-            height: 600px;
+            height: 70vh;
+            min-height: 400px;
+            max-height: 700px;
             overflow: hidden;
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
         }
-
-        .carousel-item {
-            height: 600px;
-            background-position: center;
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-color: var(--primary);
+        .campus-carousel.custom-leftalign .carousel-item {
+            height: 70vh;
+            min-height: 400px;
+            max-height: 700px;
         }
-
-        .carousel-item img {
+        .campus-carousel.custom-leftalign .carousel-item img {
             object-fit: cover;
-            width: 100%;
+            width: 100vw;
             height: 100%;
-            filter: brightness(0.85);
-            background-color: var(--primary);
+            filter: brightness(0.7);
         }
-
-        .carousel-overlay {
+        .custom-left-overlay {
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7));
+            top: 0; left: 0; bottom: 0; width: 60vw; max-width: 900px;
+            background: transparent;
             z-index: 1;
+            height: 100%;
+            pointer-events: none;
         }
-
-        .carousel-caption {
-            position: absolute;
-            right: 15%;
-            bottom: 20px;
-            left: 15%;
-            z-index: 2;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            color: #fff;
-            text-align: center;
-        }
-
-        .carousel-indicators {
-            z-index: 3;
-        }
-
-        .carousel-control-prev,
-        .carousel-control-next {
-            z-index: 3;
-            width: 5%;
-        }
-
-        .carousel-content {
+        .custom-left-caption {
             position: absolute;
             top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            left: 0;
+            transform: translateY(-50%);
             z-index: 2;
-            text-align: center;
-            width: 90%;
-            max-width: 1200px;
-            color: var(--white);
+            color: #fff;
+            text-align: left;
+            max-width: 900px;
+            margin-left: 5vw;
+            padding: 2.5rem 2rem 2.5rem 2.5rem;
+            font-family: 'Poppins', sans-serif;
+        }
+        .custom-label {
+            font-size: 1.1rem;
+            color: #ffe066;
+            font-weight: 600;
+            margin-bottom: 0.7rem;
+            letter-spacing: 0.5px;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+        .custom-title {
+            font-size: 2.8rem;
+            font-weight: 800;
+            line-height: 1.1;
+            margin-bottom: 1.2rem;
+            letter-spacing: -1px;
+        }
+        .custom-title .custom-acronym {
+            font-size: 2.2rem;
+            color: #ffe066;
+            display: block;
+            margin-top: 0.5rem;
+        }
+        .custom-subtitle {
+            font-size: 1.3rem;
+            font-weight: 400;
+            margin-bottom: 1.2rem;
+            color: #f1f1f1;
+        }
+        .custom-event-details {
+            display: flex;
+            gap: 1.2rem;
+            flex-wrap: wrap;
+            margin-top: 1.2rem;
+        }
+        .custom-event-item {
+            background: rgba(30, 30, 30, 0.7);
+            padding: 0.7rem 1.3rem;
+            border-radius: 2rem;
+            display: flex;
+            align-items: center;
+            gap: 0.7rem;
+            font-size: 1rem;
+            color: #fff;
+            font-weight: 500;
+        }
+        .custom-event-item i {
+            color: #2ac0e1;
+            font-size: 1.2rem;
+        }
+        .custom-left-indicators {
+            display: none;
+        }
+        @media (max-width: 900px) {
+            .custom-left-caption {
+                max-width: 98vw;
+                margin-left: 2vw;
+                padding: 1.2rem 0.5rem 1.2rem 1rem;
+            }
+            .custom-title {
+                font-size: 2rem;
+            }
+            .custom-title .custom-acronym {
+                font-size: 1.2rem;
+            }
+        }
+        @media (max-width: 600px) {
+            .campus-carousel.custom-leftalign, .campus-carousel.custom-leftalign .carousel-item {
+                height: 320px;
+                min-height: 220px;
+                max-height: 400px;
+            }
+            .custom-left-caption {
+                top: 60%;
+                transform: translateY(-60%);
+                padding: 0.7rem 0.2rem 0.7rem 0.7rem;
+            }
+            .custom-label {
+                font-size: 0.95rem;
+            }
+            .custom-title {
+                font-size: 1.1rem;
+            }
+            .custom-title .custom-acronym {
+                font-size: 0.9rem;
+            }
+            .custom-subtitle {
+                font-size: 1rem;
+            }
+            .custom-event-details {
+                gap: 0.5rem;
+                margin-top: 0.7rem;
+            }
+            .custom-event-item {
+                padding: 0.5rem 0.8rem;
+                font-size: 0.8rem;
+            }
         }
 
         /* Hero Content */
@@ -513,6 +584,37 @@
             }
         }
 
+        @media (max-width: 600px) {
+            .header-container {
+                padding: 10px 0 !important;
+            }
+            .conference-header {
+                gap: 1rem !important;
+                padding: 0 10px !important;
+            }
+            .logo-section {
+                min-width: 70px !important;
+                padding: 0 !important;
+            }
+            .jiit-logo {
+                max-width: 70px !important;
+            }
+            .jiit-logo img {
+                height: 50px !important;
+                max-width: 70px !important;
+            }
+            .conference-title h1 {
+                font-size: 1.1rem !important;
+                margin-bottom: 0.1rem !important;
+                line-height: 1.15 !important;
+                padding: 0 !important;
+            }
+            .conference-title .year {
+                font-size: 1rem !important;
+                margin-top: 0.2rem !important;
+            }
+        }
+
         .footer-section {
             background: var(--dark);
             color: var(--white);
@@ -607,23 +709,56 @@
     </nav>
 
     <!-- Campus Carousel -->
-    <div id="campusCarousel" class="carousel slide campus-carousel" data-bs-ride="carousel" data-bs-interval="5000">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#campusCarousel" data-bs-slide-to="0" class="active"></button>
-            <button type="button" data-bs-target="#campusCarousel" data-bs-slide-to="1"></button>
-            <button type="button" data-bs-target="#campusCarousel" data-bs-slide-to="2"></button>
-        </div>
+    <div id="campusCarousel" class="carousel slide campus-carousel custom-leftalign" data-bs-ride="carousel" data-bs-interval="5000">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="images/campus1.jpg" alt="JIIT Campus - Evening View" class="d-block w-100" onerror="this.src='https://placehold.co/1920x1080/1a237e/ffffff?text=JIIT+Campus'">
-    </div>
+                <div class="custom-left-overlay"></div>
+                <div class="custom-left-caption">
+                    <div class="custom-label"><i class="fas fa-graduation-cap"></i> International Conference</div>
+                    <div class="custom-title">Welcome to<br>International Conference on Humanities, Social Sciences and Management<br><span class="custom-acronym">(ICHSM 2026)</span></div>
+                    <div class="custom-subtitle">Redefining Humanities, Social Sciences, and Management in the Digital Age</div>
+                    <div class="custom-event-details">
+                        <div class="custom-event-item"><i class="far fa-calendar-alt"></i> February 26–28, 2026</div>
+                        <div class="custom-event-item"><i class="fas fa-map-marker-alt"></i> JIIT, Noida, India</div>
+                        <div class="custom-event-item"><i class="fas fa-video"></i> Hybrid Mode</div>
+                    </div>
+                </div>
+            </div>
             <div class="carousel-item">
                 <img src="images/campus2.jpg" alt="JIIT Campus - Aerial View" class="d-block w-100" onerror="this.src='https://placehold.co/1920x1080/1a237e/ffffff?text=JIIT+Campus'">
-                        </div>
+                <div class="custom-left-overlay"></div>
+                <div class="custom-left-caption">
+                    <div class="custom-label"><i class="fas fa-graduation-cap"></i> International Conference</div>
+                    <div class="custom-title">Welcome to<br>International Conference on Humanities, Social Sciences and Management<br><span class="custom-acronym">(ICHSM 2026)</span></div>
+                    <div class="custom-subtitle">Redefining Humanities, Social Sciences, and Management in the Digital Age</div>
+                    <div class="custom-event-details">
+                        <div class="custom-event-item"><i class="far fa-calendar-alt"></i> February 26–28, 2026</div>
+                        <div class="custom-event-item"><i class="fas fa-map-marker-alt"></i> JIIT, Noida, India</div>
+                        <div class="custom-event-item"><i class="fas fa-video"></i> Hybrid Mode</div>
+                    </div>
+                </div>
+            </div>
             <div class="carousel-item">
                 <img src="images/campus3.jpg" alt="JIIT Auditorium" class="d-block w-100" onerror="this.src='https://placehold.co/1920x1080/1a237e/ffffff?text=JIIT+Campus'">
-                        </div>
+                <div class="custom-left-overlay"></div>
+                <div class="custom-left-caption">
+                    <div class="custom-label"><i class="fas fa-graduation-cap"></i> International Conference</div>
+                    <div class="custom-title">Welcome to<br>International Conference on Humanities, Social Sciences and Management<br><span class="custom-acronym">(ICHSM 2026)</span></div>
+                    <div class="custom-subtitle">Redefining Humanities, Social Sciences, and Management in the Digital Age</div>
+                    <div class="custom-event-details">
+                        <div class="custom-event-item"><i class="far fa-calendar-alt"></i> February 26–28, 2026</div>
+                        <div class="custom-event-item"><i class="fas fa-map-marker-alt"></i> JIIT, Noida, India</div>
+                        <div class="custom-event-item"><i class="fas fa-video"></i> Hybrid Mode</div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-indicators custom-left-indicators">
+            <button type="button" data-bs-target="#campusCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#campusCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#campusCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#campusCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
             <span class="visually-hidden">Previous</span>
@@ -632,55 +767,6 @@
             <span class="carousel-control-next-icon"></span>
             <span class="visually-hidden">Next</span>
         </button>
-        <div class="carousel-overlay"></div>
-        <div class="carousel-content">
-            <h2 class="text-center mb-4" style="color: #fff; font-size: 2.5rem; font-weight: 500;">Welcome to</h2>
-            <h1 class="hero-title" style="font-size: 3.2rem; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); margin-bottom: 1rem;">
-                International Conference on Humanities, Social Sciences and Management<br>
-                <span style="font-size: 2.8rem; display: block; margin-top: 1rem;">(ICHSM 2026)</span>
-            </h1>
-            <div class="hero-subtitle" style="font-size: 1.8rem; margin: 2rem 0; text-shadow: 1px 1px 3px rgba(0,0,0,0.4);">
-                Redefining Humanities, Social Sciences, and Management in the Digital Age
-            </div>
-            
-            <div class="event-details">
-                <div class="event-detail-item">
-                    <i class="far fa-calendar-alt"></i>
-                    <span>February 26–28, 2026</span>
-                </div>
-                <div class="event-detail-item">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <span>JIIT, Noida, India</span>
-                    </div>
-                <div class="event-detail-item">
-                    <i class="fas fa-video"></i>
-                    <span>Hybrid Mode</span>
-                </div>
-            </div>
-
-            <div class="action-buttons">
-                <a href="registration.html" class="action-btn primary">
-                    <i class="fas fa-user-plus"></i>
-                    <span>Register Now</span>
-                </a>
-                <a href="call_for_papers.html" class="action-btn">
-                    <i class="fas fa-paper-plane"></i>
-                    <span>Submit Paper</span>
-                </a>
-                <a href="venue.html" class="action-btn">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <span>Venue Info</span>
-                </a>
-                <a href="speakers.html" class="action-btn">
-                    <i class="fas fa-microphone"></i>
-                    <span>Speakers</span>
-                </a>
-                <a href="schedule.html" class="action-btn">
-                    <i class="fas fa-calendar-alt"></i>
-                    <span>Schedule</span>
-                </a>
-            </div>
-        </div>
     </div>
 
     <!-- Image Slider Panel -->
