minor bug and fixes
added about ichsm at home page, fixed bugs, improved overall ui

--- a/contact.html
+++ b/contact.html
@@ -436,7 +436,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="call-for-papers.html">Call for Papers</a>
+                        <a class="nav-link" href="call_for_papers.html">Call for Papers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registration.html">Registration</a>
@@ -449,6 +449,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="committee.html">Committee</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="venue.html">Venue</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="contact.html">Contact</a>
