--- a/about.html
+++ b/about.html
@@ -329,6 +329,9 @@
                         <a class="nav-link" href="committee.html">Committee</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="venue.html">Venue</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -356,7 +359,7 @@
                         
                         <div class="mt-4">
                             <a href="registration.html" class="animated-btn">
-                                <i class="fas fa-user-plus"></i>Join the Conference
+                                <i class="fas fa-user-plus"></i>Register Here
                             </a>
                         </div>
                     </div>
