--- a/registration.html
+++ b/registration.html
@@ -461,6 +461,9 @@
                         <a class="nav-link" href="committee.html">Committee</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="venue.html">Venue</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
